Changed icons - did a bit of tidying up of the launcher

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,9 +4,5 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
+    <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@drawable/icon" android:id="@+id/TitleImage" android:layout_gravity="center"></ImageView>
 </LinearLayout>
