--- a/res/values/tag_ids.xml
+++ b/res/values/tag_ids.xml
@@ -2,4 +2,6 @@
 <resources>
     <integer name="EventID">0</integer>
     <integer name="EventPositionInList">1</integer>
+    
+    <integer name="DeviceUID">2</integer>
 </resources>
