--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -1,6 +1,6 @@
 
     <ScrollView android:id="@+id/scrollView1" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
-        <RelativeLayout android:id="@+id/relativeLayout1" android:layout_width="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:isScrollContainer="true" android:fadeScrollbars="true" android:fadingEdge="vertical" android:scrollbars="vertical" android:layout_height="fill_parent">
+        <RelativeLayout android:id="@+id/relativeLayout1" android:layout_width="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:isScrollContainer="true" android:fadeScrollbars="true" android:fadingEdge="vertical" android:scrollbars="vertical" android:layout_height="wrap_content">
         <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:id="@+id/URLLabel" android:layout_marginLeft="6px" android:layout_marginTop="6dp" android:text="Zenoss URL:"></TextView>
         <EditText android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:id="@+id/ZenossURL" android:hint="http://zenoss.url:8080" android:layout_below="@+id/URLLabel" android:layout_width="fill_parent" android:layout_marginLeft="10px" android:layout_marginRight="10px" android:inputType="textUri">
             <requestFocus></requestFocus>
@@ -8,7 +8,7 @@
         <EditText android:inputType="textPersonName" android:layout_height="wrap_content" android:id="@+id/ZenossUserName" android:layout_marginLeft="10px" android:layout_width="fill_parent" android:layout_marginRight="10px" android:hint="Zenoss User Name" android:layout_below="@+id/ZenossURL" android:layout_marginTop="6dp"></EditText>
         <EditText android:inputType="textPassword" android:layout_height="wrap_content" android:id="@+id/ZenossPassword" android:layout_width="fill_parent" android:layout_marginLeft="10px" android:layout_marginRight="10px" android:layout_below="@+id/ZenossUserName" android:hint="Zenoss Password"></EditText>
         <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/ZenossPassword" android:layout_centerHorizontal="true" android:id="@+id/PasswordWarning" android:textSize="4pt" android:text="!! Password is stored unencrypted on local storage !!" android:textColor="#FF0000"></TextView>
-        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:id="@+id/SaveButton" android:text="Save Settings" android:layout_marginTop="12px" android:layout_alignParentBottom="true" android:layout_below="@+id/severityContainer2"></Button>
+        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:id="@+id/SaveButton" android:text="Save Settings" android:layout_marginTop="12px" android:layout_alignParentBottom="true" android:layout_below="@+id/productionStateFilter"></Button>
         
         
         
@@ -27,6 +27,13 @@
         <LinearLayout android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/severityContainer" android:layout_centerHorizontal="true" android:id="@+id/severityContainer2">
             <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:text="Info" android:layout_marginRight="4dp" android:id="@+id/infoCheckBox"></CheckBox>
             <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:text="Debug" android:layout_marginRight="4dp" android:id="@+id/debugCheckBox"></CheckBox>
+        </LinearLayout>
+        <LinearLayout android:layout_height="wrap_content" android:layout_below="@+id/severityContainer2" android:layout_centerHorizontal="true" android:id="@+id/productionStateFilter" android:layout_width="fill_parent" android:gravity="center_vertical|center_horizontal">
+            <RadioGroup android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/productionStateRadioGroup">
+                <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:id="@+id/radioProductionOnly" android:text="Production Only [1000]"></RadioButton>
+                <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/radioState500" android:text="Production State &gt;= 500"></RadioButton>
+                <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/radioState1" android:text="Production State &gt; 1" android:checked="true"></RadioButton>
+            </RadioGroup>
         </LinearLayout>
     </RelativeLayout>
     
