--- a/res/layout-land/settings.xml
+++ b/res/layout-land/settings.xml
@@ -1,8 +1,8 @@
 
-    <ScrollView android:id="@+id/scrollView1" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
+    <ScrollView android:id="@+id/scrollView1" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="#929ba4">
         
         <LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_height="wrap_content">
-		        <RelativeLayout android:id="@+id/relativeLayout1" xmlns:android="http://schemas.android.com/apk/res/android" android:isScrollContainer="true" android:fadeScrollbars="true" android:fadingEdge="vertical" android:scrollbars="vertical" android:layout_height="wrap_content" android:background="#929ba4" android:layout_width="228dp">
+		        <RelativeLayout android:id="@+id/relativeLayout1" xmlns:android="http://schemas.android.com/apk/res/android" android:isScrollContainer="true" android:fadeScrollbars="true" android:fadingEdge="vertical" android:scrollbars="vertical" android:background="#929ba4" android:layout_width="228dp" android:layout_height="wrap_content">
 		        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:id="@+id/URLLabel" android:layout_marginLeft="6px" android:layout_marginTop="6dp" android:text="Zenoss URL:"></TextView>
 		        <EditText android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:id="@+id/ZenossURL" android:hint="http://zenoss.url:8080" android:layout_below="@+id/URLLabel" android:layout_width="fill_parent" android:layout_marginLeft="10px" android:layout_marginRight="10px" android:inputType="textUri">
 		            <requestFocus></requestFocus>
@@ -18,7 +18,7 @@
 		        <EditText android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_width="fill_parent" android:layout_marginLeft="10px" android:hint="email@domain.com" android:id="@+id/PagerDutyEmailAddress" android:layout_marginRight="10px" android:layout_below="@+id/PagerDutyURL" android:layout_marginTop="6dp" android:inputType="textEmailAddress"></EditText>
 		        <EditText android:layout_height="wrap_content" android:inputType="textPassword" android:layout_below="@+id/PagerDutyEmailAddress" android:id="@+id/PagerDutyPassword" android:layout_centerHorizontal="true" android:layout_marginLeft="10px" android:layout_marginRight="10px" android:layout_width="fill_parent" android:hint="PagerDuty Password"></EditText>
 		    </RelativeLayout>
-		        <RelativeLayout android:id="@+id/relativeLayout2" android:layout_height="match_parent" android:layout_width="wrap_content" android:background="#929ba4">
+		        <RelativeLayout android:id="@+id/relativeLayout2" android:layout_width="wrap_content" android:background="#929ba4" android:layout_height="wrap_content">
 		            <LinearLayout android:id="@+id/severityContainer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_vertical|center_horizontal">
 		                <CheckBox android:text="Critical" android:id="@+id/criticalCheckBox" android:checked="true" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_width="wrap_content" android:layout_marginRight="4dp"></CheckBox>
 		                <CheckBox android:text="Error" android:id="@+id/errorCheckBox" android:checked="true" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_width="wrap_content" android:layout_marginRight="4dp"></CheckBox>
