--- a/res/menu/home_menu.xml
+++ b/res/menu/home_menu.xml
@@ -1,6 +1,6 @@
 
     <menu xmlns:android="http://schemas.android.com/apk/res/android">
-        <item android:id="@+id/Help" android:title="Help"  android:icon="@drawable/ic_menu_help"></item>
-        <item android:title="Pager Duty Alerts" android:icon="@drawable/ic_menu_pagerduty" android:id="@+id/pagerduty" android:titleCondensed="Pager Duty"></item>
-        <item android:id="@+id/EmptyDB" android:title="Empty Database"  android:icon="@drawable/ic_menu_empty_db"></item>
+        <item android:id="@+id/Help" android:icon="@drawable/ic_menu_help" android:title="@string/homeMenu_Help"></item>
+        <item android:icon="@drawable/ic_menu_pagerduty" android:id="@+id/pagerduty" android:title="@string/homeMenu_PagerDuty" android:titleCondensed="@string/homeMenu_PagerDuty"></item>
+        <item android:id="@+id/EmptyDB" android:icon="@drawable/ic_menu_empty_db" android:title="@string/homeMenu_ManageDB"></item>
     </menu>
