--- a/res/layout/settings_basic.xml
+++ b/res/layout/settings_basic.xml
@@ -8,7 +8,7 @@
         <EditText android:inputType="textPersonName" android:layout_height="wrap_content" android:id="@+id/ZenossUserName" android:layout_marginLeft="10px" android:layout_width="fill_parent" android:layout_marginRight="10px" android:hint="Zenoss User Name" android:layout_below="@+id/ZenossURL" android:layout_marginTop="6dp"></EditText>
         <EditText android:inputType="textPassword" android:layout_height="wrap_content" android:id="@+id/ZenossPassword" android:layout_width="fill_parent" android:layout_marginLeft="10px" android:layout_marginRight="10px" android:layout_below="@+id/ZenossUserName" android:hint="Zenoss Password"></EditText>
         <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/ZenossPassword" android:layout_centerHorizontal="true" android:id="@+id/PasswordWarning" android:textSize="4pt" android:text="!! Password is stored unencrypted on local storage !!" android:textColor="#FF0000" android:visibility="invisible"></TextView>
-        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:id="@+id/SaveButton" android:text="Save Settings" android:layout_marginTop="12px" android:layout_alignParentBottom="true" android:layout_below="@+id/productionStateFilter"></Button>
+        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:id="@+id/SaveButton" android:text="Save Settings" android:layout_marginTop="12px" android:layout_alignParentBottom="true" android:layout_below="@+id/notificationSoundCheckBox"></Button>
         <CheckBox android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/AllowBackgroundService" android:text=" Background poller" android:layout_alignParentLeft="true" android:layout_centerHorizontal="false" android:layout_marginLeft="10px" android:layout_below="@+id/ZenossPassword" android:layout_marginTop="6dp"></CheckBox>
         <SeekBar android:layout_height="wrap_content" android:id="@+id/BackgroundServiceDelay" android:layout_toRightOf="@+id/AllowBackgroundService" android:layout_marginLeft="20px" android:layout_width="180px" android:progress="30" android:layout_below="@+id/ZenossPassword" android:layout_marginTop="15dp" android:max="900"></SeekBar>
         <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:layout_below="@+id/BackgroundServiceDelay" android:layout_alignRight="@+id/ZenossPassword" android:layout_marginRight="16dp" android:id="@+id/DelayLabel" android:text="30 secs" android:textSize="4pt"></TextView>
@@ -24,6 +24,15 @@
         <LinearLayout android:layout_height="wrap_content" android:layout_below="@+id/severityContainer2" android:layout_centerHorizontal="true" android:id="@+id/productionStateFilter" android:layout_width="fill_parent" android:gravity="center_vertical|center_horizontal">
             <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/productionOnlyCheckBox" android:text="@string/productionStateNotificationLabel"></CheckBox>
         </LinearLayout>
+
+        <CheckBox
+            android:id="@+id/notificationSoundCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/productionStateFilter"
+            android:text="@string/notificationSoundLabel" />
+
     </RelativeLayout>
     
     
