--- a/res/drawable-hdpi/background_gradient_2.xml
+++ b/res/drawable-hdpi/background_gradient_2.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 <gradient
-    android:startColor="#cfe1edFF"
+    android:startColor="#aeb2b7"
     android:endColor="#929ba4"
     android:gradientRadius="326"
     android:type="radial"/>
